fixed the side spacing and padding

--- a/ascension/src/components/header/header.module.css
+++ b/ascension/src/components/header/header.module.css
@@ -21,6 +21,11 @@
 .backGround{
     background-image: linear-gradient(to bottom, #000000 25%, rgba(0, 0, 0, 0) 100%);
     height: 400px;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    overflow: hidden; 
 }
 
 nav ul {
